Bug 152072 - "Send Input To All Tabs" does not terminate properly
Summary: "Send Input To All Tabs" does not terminate properly
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-09 20:39 UTC by Aaron J. Seigo
Modified: 2008-04-13 20:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron J. Seigo 2007-11-09 20:39:03 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

with multiple tabs, if Edit -> Send Input To All Tabs is turned on and then 
later turned off, the other tabs still echo the input from the source tab. 

new tabs created after Send Input To All Tabs has been turned off behave 
properly, however.
Comment 1 Will Stephenson 2007-11-22 22:17:23 UTC
echoed input appears twice in the tabs other than the one it was entered in, here.
Comment 2 Robert Knight 2008-01-05 23:29:05 UTC
Status update:  The feature was removed in KDE 4.0 because it doesn't work properly (in several ways).  It is on my list of KNOWN ISSUES to resolve in future releases.
Comment 3 Aaron J. Seigo 2008-01-06 00:45:30 UTC
sounds like a responsible way to handle it; thanks for the attention to the problem. look forward to it being back in a future release, it is quite a useful feature.
Comment 4 Robert Knight 2008-04-13 20:49:53 UTC
SVN commit 796545 by knight:

Re-implement 'Send Input to All' (now Edit -> Copy Input To...)

Improvements in the KDE 4 version:

- Input can be copied to all other sessions or only a subset of sessions,
  selection is via a filter-able list which appears when 'Copy Input To...' is clicked.
- Input can be sent from a tab in one window to a tab in another window
  (all sessions in all windows are displayed in the filter window)

BUG: 152072
BUG: 77682

Squashed commit of the following:

commit 3184e1958d3aa7e7574081df32814dbe44591c9e
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 19:24:22 2008 +0100

    Remove debugging messages.

commit 31afd9b2a3a327ca3e43deff47415de41a1ad74e
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 19:16:33 2008 +0100

    Copy input dialog.  Hide 'Number' column and header.  Show the check box in the title column.  Focus the search filter before showing the dialog.

commit 8c74e736d322e74d7af812a14500d748e748a224
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 19:03:59 2008 +0100

    Remove sessions from the internal checked/fixed sets when they are removed.  Fix crashes if sessions exited while SessionController was showing a dialog for that session.  Add QPointer<T> guards around the dialog exec() methods.

commit e4085069c2ff8cedb987639f50b73a3c679319f6
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 18:44:40 2008 +0100

    Remove sessions from the SessionGroup and SessionListModel when they terminate.

commit 29db3a3dd84f392ee333918e261bd6bcd75fd062
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 18:39:24 2008 +0100

    Use an extended rather than single selection in CopyInputDialog

commit 3f93507405053c84e09337225fa6e2a582776264
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 17:54:22 2008 +0100

    Copy Input Dialog:  Show tab text in the Title column.  Show clear button in filter line edit.

commit 0619f7ad72a1a346118a0174e5aee01ce94ddc52
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 17:40:07 2008 +0100

    Copy Input Dialog:  Add buttons to select and deselect all visible sessions.

commit 126afb3d394894a0325c5772fb32a25380932c44
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 17:23:07 2008 +0100

    Show the master session as checked and disabled.

commit c559bd5f5bcc59adecc3f29ee5b16200adb37b09
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 17:20:40 2008 +0100

    Create a SessionGroup in the SessionController when copyInputToAll() is called and use the CopyInputDialog to allow the user to choose which sessions the current one copies to.

commit 64c12e58a582a17b5cdeddcc8f9df7a89885f9e5
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 17:19:47 2008 +0100

    Display session list with check boxes and filter to select sessions to copy input to.  Show master session as a disabled, checked item.

commit 43eb5ccdfc768b42c5e650b6e56d1e1120ab5c5b
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 17:19:06 2008 +0100

    Add header data and Session* pointer to items in SessionListModel.

commit a8236a6658e1540a924aa6467dc90aeed346a0be
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 17:18:28 2008 +0100

    Remove connection to removed slot.

commit 03990fa244159b50152cc721a0fe4e403551d47c
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 17:17:54 2008 +0100

    Make SessionGroup take a QObject* parent argument in the constructor.

commit e2f91001c09a8422fb44ad58cf95f8dcba22c063
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 15:25:26 2008 +0100

    Add CopyInputDialog to build.

commit 3b33e1d6abdde56bbafd2bbd64c89c008a41d096
Author: Robert Knight <robertknight@gmail.com>
Date:   Sun Apr 13 14:32:36 2008 +0100

    Add header and implementation files for 'Copy Input To' dialog.

commit 9ebc36e3f09865f29702768cbb17279054e8cb4c
Author: Robert Knight <robertknight@gmail.com>
Date:   Thu Apr 10 07:04:48 2008 +0100

    Add a dialog for selecting sessions to copy input to.


 M  +1 -1      desktop/sessionui.rc  
 M  +3 -0      src/CMakeLists.txt  
 A             src/CopyInputDialog.cpp   [License: GPL (v2+)]
 A             src/CopyInputDialog.h   [License: GPL (v2+)]
 A             src/CopyInputDialog.ui  
 M  +14 -8     src/Session.cpp  
 M  +4 -1      src/Session.h  
 M  +51 -9     src/SessionController.cpp  
 M  +3 -6      src/SessionController.h  
 M  +96 -1     src/SessionManager.cpp  
 M  +29 -0     src/SessionManager.h  
 M  +0 -17     src/ViewManager.cpp  
 M  +0 -3      src/ViewManager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=796545