src/SessionManager.cpp
@@ -32,6 +32,7 @@
 
 // KDE
 #include <klocale.h>
+#include <kicon.h>
 #include <krun.h>
 #include <kshell.h>
 #include <kconfig.h>
@@ -693,12 +694,106 @@ QKeySequence SessionManager::shortcut(Profile::Ptr info) const
     return QKeySequence();
 }
 
-
 K_GLOBAL_STATIC( SessionManager , theSessionManager )
 SessionManager* SessionManager::instance()
 {
 	return theSessionManager;
 }
 
+SessionListModel::SessionListModel(QObject* parent)
+: QAbstractListModel(parent)
+{
+}
+
+void SessionListModel::setSessions(const QList<Session*>& sessions)
+{
+	_sessions = sessions;
+
+	foreach(Session* session, sessions)
+		connect(session,SIGNAL(finished()),this,SLOT(sessionFinished()));
+
+	reset();
+}
+QVariant SessionListModel::data(const QModelIndex& index, int role) const
+{
+	Q_ASSERT(index.isValid());
+	
+	int row = index.row();
+	int column = index.column();
+
+	Q_ASSERT( row >= 0 && row < _sessions.count() );
+	Q_ASSERT( column >= 0 && column < 2 );
+
+	switch (role)
+	{
+		case Qt::DisplayRole:
+			if (column == 1)
+				return _sessions[row]->title(Session::DisplayedTitleRole);
+			else if (column == 0)
+				return _sessions[row]->sessionId();
+			break;
+		case Qt::DecorationRole:
+			if (column == 1)
+				return KIcon(_sessions[row]->iconName());
+			else
+				return QVariant();
+	}
+
+	return QVariant();
+}
+QVariant SessionListModel::headerData(int section, Qt::Orientation orientation, 
+						int role) const
+{
+	if (role != Qt::DisplayRole)
+		return QVariant();
+
+	if (orientation == Qt::Vertical)
+		return QVariant();
+	else
+	{
+		switch (section)
+		{
+			case 0:
+				return i18n("Number");
+			case 1:
+				return i18n("Title");
+			default:
+				return QVariant();
+		}	
+	}
+}
+
+int SessionListModel::columnCount(const QModelIndex& parent) const
+{
+	return 2;
+}
+int SessionListModel::rowCount(const QModelIndex& parent) const
+{
+	return _sessions.count();
+}
+QModelIndex SessionListModel::parent(const QModelIndex& index) const
+{
+	return QModelIndex();
+}
+void SessionListModel::sessionFinished()
+{
+	Session* session = qobject_cast<Session*>(sender());
+	int row = _sessions.indexOf(session);
+	
+	if (row != -1)
+	{
+		beginRemoveRows(QModelIndex(),row,row);
+		sessionRemoved(session);
+		_sessions.removeAt(row);
+		endRemoveRows();
+	}
+}
+QModelIndex SessionListModel::index(int row, int column, const QModelIndex& parent) const
+{
+	if (hasIndex(row,column,parent))
+		return createIndex(row,column,_sessions[row]);
+	else
+		return QModelIndex();
+}
 
 #include "SessionManager.moc"
