src/ViewManager.h
@@ -233,9 +233,6 @@ private slots:
 
     void updateViewsForSession(Session* session);
 
-    // sends input from active view to all sessions
-    void sendInputToAll();
-
     // moves active view to the left
     void moveActiveViewLeft();
     // moves active view to the right
